--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,5 @@
 BASE_URL=https://example.com
 LINK_LENGTH=6
 
-# firebase config
-FIREBASE_API_KEY=""
-FIREBASE_AUTH_DOMAIN=""
-FIREBASE_DATABASE_URL=""
-FIREBASE_PROJECT_ID=""
-FIREBASE_STORAGE_BUCKET=""
-FIREBASE_MESSAGING_SENDER_ID=""
-FIREBASE_APP_ID=""
+# set this to your firebase private key json file
+GOOGLE_APPLICATION_CREDENTIALS=/path/to/serviceAccount.json
